# spiky_situation

./: .gitignore  Cargo.toml  README.md  README2.md  README_ALPHA.md  README_ART.md  README_AUDIO.md  README_EDITOR.md  README_GAME.md  README_ISSUES.md  README_LIGHTING.md  README_RAILS.md  README_TRAPS.md
assets/: stage_0.stage  stage_2.stage  stage_5.stage
assets/levels/: level_0.level
assets/shaders/: background.wgsl  lit_sprite.wgsl  splat.wgsl
assets/stages/: stage_0.stage  stage_1.stage  stage_2.stage  stage_3.stage  stage_4.stage  stage_5.stage  stage_6.stage  stage_7.stage  stage_8.stage  stage_9.stage
src/: ground.rs  local_player.rs  main.rs  wall.rs
src/audio/: global_audio.rs  mod.rs
src/builders/: mod.rs  player_builders.rs
src/camera/: mod.rs
src/common/: animated_sprite.rs  animation_controller.rs  bloom.rs  checkpoint.rs  death.rs  math_ex.rs  mod.rs  mouse.rs  offset_mover.rs  pair_map.rs  rails.rs  shake.rs  splat.rs  states.rs
src/databases/: game_db.rs  mod.rs  save_db.rs  splat_db.rs
src/debugging/: fps.rs
src/game/: current_run.rs  game_over.rs  mod.rs  stage_goal.rs
src/lit_sprite/: components.rs  global_components.rs  mod.rs  systems.rs
src/main_menu/: mod.rs  ui.rs
src/obstacles/: mod.rs
src/player/: animation.rs  audio.rs  common.rs  dash_controller.rs  death.rs  horizontal_movement_controller.rs  jump_controller.rs  look_state.rs  mod.rs  physics_controller.rs  spawner.rs  wall_jump_controller.rs
src/rt_lights/: components.rs  compute_shader.rs  debug.rs  mod.rs  occluders.rs  post_process_shader.rs
(+70 files in other folders)
