[package]
name = "bevy_multiplayer_platformer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.1"
bevy_rapier2d = "0.30.0"
bincode = "1.3.3"
directories = "6.0.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.63"

[profile.dev.package."*"]
opt-level = 3
