[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "std",             
    "multi_threaded",  
    "async_executor",
    "sysinfo_plugin",  
    "bevy_asset",      
    "bevy_log",        
    "bevy_state",      
    "bevy_winit",      
    "bevy_window",     
    "bevy_gilrs",      
    "x11",         
    "bevy_render",        
    "bevy_core_pipeline", 
    "bevy_sprite",        
    "bevy_pbr",           
    "bevy_scene",         
    "bevy_gltf",          
    "tonemapping_luts",   
    "webgl2",             
    "png",             
    "hdr",             
    "zstd",            
    "ktx2",            
    "bevy_text",       
    "bevy_ui",         
    "default_font",    
] }
bevy_seedling = "0.5"
bincode = "1.3.3"
directories = "6.0.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.63"
avian2d = "0.3"
bevy_app_compute = "0.16.0"
bytemuck = "1.23.2"

[profile.dev.package."*"]
opt-level = 3
